gatekeeper/templates/block-latest-images.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: blocklatestimages
spec:
  crd:
    spec:
      names:
        kind: BlockLatestImages
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package blocklatestimages
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("Container '%v' must not use :latest tag", [container.name])
        }
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not contains(container.image, ":")
          msg := sprintf("Container '%v' must specify an image tag", [container.name])
        }
