gatekeeper/templates/require-non-root.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: requirenonroot
spec:
  crd:
    spec:
      names:
        kind: RequireNonRoot
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package requirenonroot
        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not input.review.object.spec.securityContext.runAsNonRoot
          not container.securityContext.runAsNonRoot
          msg := sprintf("Container '%v' must run as non-root", [container.name])
        }
